--- a/kubernetes/apps/flux-system/weave-gitops/app/secret.sops.yaml
+++ b/kubernetes/apps/flux-system/weave-gitops/app/secret.sops.yaml
@@ -4,8 +4,8 @@ metadata:
     name: cluster-user-auth
     namespace: flux-system
 stringData:
-    password: ENC[AES256_GCM,data:lB50EgjkqfKBeoB7ochMfDs3o5NK4jP3lWlMa217PIu8hv8nzbHIyGZywuLVWnv6KnAkBYu1blROjeHO,iv:bu+Au7zZyrtlfArEnk+rEv49Rd4Sgy8W7CfswWqysYk=,tag:IaTrbQfJ1SiLMygD5bFhmw==,type:str]
-    username: ENC[AES256_GCM,data:u+AlhHc=,iv:BvtKwwOJ8ZJ5GDqBAG95HkDzK7Cb4zGLf8VWMlwkqmA=,tag:XnfgBULST/IF+unsb0hOsA==,type:str]
+    password: ENC[AES256_GCM,data:NslW3WZqWEawtTmQGmxICbvqlWSkX+aU61TltMl2ARgR+ke4aQ7+iAEWhE65Pw8c6BUhV6+Z6JFPbabA,iv:ekwydIMlYUk1cwNYBojz2hkidXkR5z16bY12QyY6grw=,tag:JQ9j/PhbpQQypJOVL9p8KA==,type:str]
+    username: ENC[AES256_GCM,data:f2/5ByE=,iv:MYODaY5KYmGVvoIdtFdtM/woH5TJ4F3z4gRRXaDwKqk=,tag:Ik4BZ0246y6rSZ6VW8yPPg==,type:str]
 type: Opaque
 sops:
     kms: []
@@ -16,14 +16,14 @@ sops:
         - recipient: age14q9x9ftcpqfw2kmhmlfzpx5g2wmn7tdnq34uhh4x0r2h6qfmm5dqk07z2e
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBkUHc3Vk5GVmcxcTZKcWVx
-            bnJjTXJCL2RxU0tPUUJaLy9RbHo2aU80Y3o0ClFHYUpGVjJERldvVG5tREUvOVhl
-            ZnEwMi9UTzZYdytjcFpzMUpYeldVMGMKLS0tIEZsS0Q4bWlaZUNTVlRrOE1OTVUz
-            dGhTKzF6UDIybGRjb1ZodEh2RVhvSjQKn3Qx63UgTINuhYuXZjQV7XhfXtbE5yzh
-            3m8VJlmJnYPAEvWDTyzLOmFezm99NhHcdZiVf+bsuLo2wbvRYFMuzQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBwTXl3Yjl6YzhnbTJSakRZ
+            Sm1xcFJhS0VPTng1Rk53ZFlscUlnQk9xbVRJClpQMUI5bG5ZL2pjL0tMdStTcXZM
+            SEhqa0c5ZTBudkZObzJDb1dhWnBZeGsKLS0tIFlkdGZFTzNaME5ObGYzdkRDN3BQ
+            V2xuVERsY2lHT2xNYkc2RER3N1EveDgKorBzZuhdif66rOONVXNJXsHmeU7wg57Z
+            oGrHczO7PwxH2c4m4L8qBJYE8JIdlyXhbeg9KM2+ysV/yMHEDBjVLQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-09-04T18:35:38Z"
-    mac: ENC[AES256_GCM,data:6GIMfJjOo9Wys6o35JsAZacoL3SEUm1ec4gFyoP4mTfcYkLOaVcC2ns3D6S8pbRhxCukJfBDUPW1/AFksqhftE0k4epzNdo32k0L9+9Hzn07/wF8XzLQrPeX1Jp/QWXHeYMkJe6awX5icH9yaehrbCJ5T/tJkh760bBSJHzsh/g=,iv:4rj8skjeQRkscSVNPLZeQQK0G2+dfeEGUzetDQVG8Cc=,tag:lK6iLtfGRa0f5GkLXtgcbg==,type:str]
+    lastmodified: "2023-09-10T20:13:52Z"
+    mac: ENC[AES256_GCM,data:F+wMyV0zpg94sVEqha3mq/ia6ENMuUAjHY4nbUGHORUEwoKkeKXgVAVO9YyfAP1vlipbCB+iEDVu+f4dtC2Cmap7SorYVvDp6cI8W3Ufk/BEdRfwKvn658VZEhMzZTOrVFl7Lqj2KeovidUBMs0Rw+xqCiZ/JyPkw3u/+dMYaks=,iv:4D6cgmudM7uxFAnonvRXDpZLaDwHd5rgDH3k3kt7x78=,tag:fMa3lpTXR/UNpnSYeJz2Tg==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
