--- a/kubernetes/flux/vars/cluster-secrets-user.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets-user.sops.yaml
@@ -4,10 +4,10 @@ metadata:
     name: cluster-secrets-user
     namespace: flux-system
 stringData:
-    SECRET_MAXMIND_LICENSE_KEY: ENC[AES256_GCM,data:qDFKMVvK70DdGWaGCqICEhsgNDQ8u56OZjsts16BW6e6rEUe9J0Z3g==,iv:9URltK/ppoeF/C7Zd+ac98hq0XKHfZLA3XXYB0zVcAo=,tag:buTwVE6VEdNq/TmKYS1xgg==,type:str]
-    SECRET_PLACEHOLDER: ENC[AES256_GCM,data:mSyuJKRlPyhJu2QT,iv:4/ZXJY4HqQ7PyLHxBTacQKtw33qWhhlCTyiJgQ/kiPc=,tag:5NbPd2uPOmi0RHw9H/o4Mg==,type:str]
-    SECRET_POSTGRES_PASSWORD: ENC[AES256_GCM,data:FEaH7MFYg09A,iv:KHdCKWNvDZLgy+SHH1VYu+Z/Bb8ldQS4OBfUvKaj4Fc=,tag:gWvINjNThgeyTE75y2huqQ==,type:str]
-    SECRET_POSTGRES_USERNAME: ENC[AES256_GCM,data:TBDv6mP+lw==,iv:0CKJUkSG5eZ0gsrCZpna0ry35+ayy4qLQcatCH7j1rI=,tag:mexV0VojZdKfRLiY/JiXLQ==,type:str]
+    SECRET_MAXMIND_LICENSE_KEY: ENC[AES256_GCM,data:6rXoIsPA2deDXRRw89vGaeCBotRe1oWbRhM8NP+bhjI6KWlZLshxEA==,iv:M/baPrGixKGeHjsOmrl1CiTyS4kavlu7HwDNzjShclU=,tag:4bAsR/ZTzjEVynsnXpEoPg==,type:str]
+    SECRET_PLACEHOLDER: ENC[AES256_GCM,data:alCHo71KY7gNwyqD,iv:G8EdaUwMXeepvxAkbQDPbznUZCdOvKzKjq0y5+YmFi0=,tag:yxXBU8aQUBW+wtupR5DMeQ==,type:str]
+    SECRET_POSTGRES_PASSWORD: ENC[AES256_GCM,data:bf9iOB+nbjr/,iv:VjR6BcPhRwsVLB49sVuW+nj4kFOEW56vQSTwJmT7wFE=,tag:sdNRL7dUWSER61Oz/YLADg==,type:str]
+    SECRET_POSTGRES_USERNAME: ENC[AES256_GCM,data:mHxNgEY6SQ==,iv:L5w8PmfxYPdOWoP3p4I87TrjAhzD3Kw5QhQlebs4JFs=,tag:I7+1BCv4W1QLgZ14CQNS5g==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -17,14 +17,14 @@ sops:
         - recipient: age14q9x9ftcpqfw2kmhmlfzpx5g2wmn7tdnq34uhh4x0r2h6qfmm5dqk07z2e
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAwaUg1QXpYR2VHZ1BSTzBt
-            SHpuZGs2Q3M5d1dCd3V4NGpiakh1akJQK3o0Ck92amw0c2FKRTMvVkJzemFzN2R2
-            TXVXYjFPRHVaVnBoN1FEVHJFNnI3N1UKLS0tIGo4TVNNYXBOdDc1T3BaYStWUERN
-            VmhkdVZnVVV3YnhaNTl2L2RYdXUrVEUKbR/zVXEhC3GWaq1cfaYeEzuAYo/SmCtM
-            ZEn57NUnUmNkA7Ep1Sxrqo7p3Fvh2vvVf/RVpJqnkF/iR2xJod666w==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBmVkdPYkFPL2FwZkZEaVdw
+            NHNMbFN3TmNkZGZyKzBvNWhScm51NXNpaXc0Ci8yZitpNXAyN0M5dU5FNXpLK3Bv
+            OVdNdmdZTlo0Y0pESlBoalRXbXBzR0UKLS0tIDZGcUJEYnBSV1lVaW82amNLZ05H
+            V3JoZERUVWdZZ1ArWkY4N2l2U3lIT3cKWuz9aircJ/U3ZY52Gny51xh8j3H9/VVs
+            KYz0Xd5XxCqU0jMzinD/xR/uF8bC6GjVBxSMeWS1dC0EXhkrtIq2nQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-09-04T18:35:32Z"
-    mac: ENC[AES256_GCM,data:0uHJyA6Mv7AxTJqM9yAOfO9SzxZzga5CiXN8etMQejBL6tXpdigaAjQLRY9UZ2ztSZ5+oOUc/BBq9xtB+rZAmbKivP8kY8dgZhWW2KINnPq2Yp3QSSMkmBqVIGXtVuisfiaEkK7qCVkCGKCE37GdbDdzukWnb1c+urHj8c8jt7I=,iv:BS0CGHMloxcYHeHo9YQLQcfAkZMdbJnpYzmq/2Ucnuk=,tag:R4I8py6UcQ2w1rvjWC/rlQ==,type:str]
+    lastmodified: "2023-09-10T20:13:47Z"
+    mac: ENC[AES256_GCM,data:T7NqDYJs3csh+kUwjfaYlaiZZ+XJlEOEQ+kMCcba59hRJ+MlbseSYdq8U197Ajzp47HWBTPNLGLTwcd4UcZhaa6lI0++sWwsGOOiEG2GT3vT7OHu1WloeqjXrkplAcySDQ9uRjZf6gC0XfdIlFg8Gga6zIB4eD7wltlpZPTA7lg=,iv:svmAdaXnQTf2NV7HAU34FRKVP7c2jmu7aCG2Ofcg+hU=,tag:s/1+hiPawxymvScxjj4DNA==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
