--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -4,12 +4,12 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_ACME_EMAIL: ENC[AES256_GCM,data:AHhfM3iUzhBBOGvE82q8ghmC/Y1h,iv:qbNn80y7/U3aqHaRAlomDOdu5QGLCxZa88o40D77yUs=,tag:ViciIkY1GaVRwt6e5f0KiQ==,type:str]
-    SECRET_CLOUDFLARE_TUNNEL_ID: ENC[AES256_GCM,data:F/6qe9YBaQ5TA9srCqnIB5wELeAyylKwMTv0w7YRryg5QzZz,iv:snLWOBwIXl0ZfwuO9tS0dXaK6jBlujcPem6S+wAScAo=,tag:98vnPvsY26yJPHMuZkCK7Q==,type:str]
-    SECRET_DOMAIN: ENC[AES256_GCM,data:kZMJRlcCBGq9osEQhA==,iv:FpDOxHoIE1CH8+B53R2oiDWqzIAYJVz+MRcHTjieC/s=,tag:CfPZ76MnCs/k8bs5c7VDpg==,type:str]
-    SECRET_DOMAIN2: ENC[AES256_GCM,data:tKdO6FAf0fq1uzI=,iv:cvnLHh4jYdOLhI4VTPEpGhmb97pjJWgjAkHk+1In7oU=,tag:HDsURJS9cSN48b+dQY/Faw==,type:str]
-    SECRET_MINIO_ACCESS_KEY: ENC[AES256_GCM,data:hBE2eHrFKd+KNQ4MrwwVUxXzdz/hcFjecf5o12K2id3eBqbr7WFazg==,iv:6P+BAIIzft7J8yeUywo5slZ+5Pyl9gRA5g224+jbqdo=,tag:hcNl/1JigO/cY454CKuJXw==,type:str]
-    SECRET_MINIO_SECRET_KEY: ENC[AES256_GCM,data:57+axeI4W6xmV+F0b4xTwiqrSPM=,iv:xkRnCXAA23rlPXSlJJnJMHdfwu/B5b8i0U7IMr/bq9I=,tag:iocjh2XrPzQYnNCDUQdJYQ==,type:str]
+    SECRET_ACME_EMAIL: ENC[AES256_GCM,data:g3262SprWFFTNMoSsFlwNk2rFyNy,iv:Br5WbiicuOjPplK72HzvILOD7kQ6O/g0y/OwJj8XqMU=,tag:j294BJzWKTYIAurHgtfUFQ==,type:str]
+    SECRET_CLOUDFLARE_TUNNEL_ID: ENC[AES256_GCM,data:qTFA/BBHnD/1AVUOzXmy0AiiCPXR8HFvuQzMqXvoclkACKu2,iv:n1Epj4IkkwIDO+TaE3+LVSwS2g0wyhz1IGcHCkbFx2Q=,tag:PsHn/8Zvv7++x3Rh14xCSg==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:OnvoLZ7pXG2BSVuFfA==,iv:bZMTSjibvNUQKgFy4ZGxuRpD/ZjuLFZpD7bDJZrzsEU=,tag:u7oz0CEujEXxPTZwEZJg1Q==,type:str]
+    SECRET_DOMAIN2: ENC[AES256_GCM,data:N6Hohy8hGjOxrgc=,iv:06gP50pT1QBiBBuWwEUYw8OaLPrxQFnOJHnEGdBCPcg=,tag:bDog/ObgBdyir3cPHU8jig==,type:str]
+    SECRET_MINIO_ACCESS_KEY: ENC[AES256_GCM,data:TuImJW6wngzguTCV3dcmbm+fERY79Aj5olqTOl5fqsJb0HdYp2yrsQ==,iv:o6Qh1cJtmRJUtDbDFmB9QOHOoF4kUpjZjXcDoSpBp6Q=,tag:fn1S9j3UoQS729/8EdyYCg==,type:str]
+    SECRET_MINIO_SECRET_KEY: ENC[AES256_GCM,data:zul01pY7GPB5JmgeefInnBiQ8iM=,iv:8CZu1qTUUUnbehWRDKgAUzzf4hJkwERGPTIzdkG5ZhA=,tag:7rsymuU6wBSqYmk8Ef4+Dw==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -19,14 +19,14 @@ sops:
         - recipient: age14q9x9ftcpqfw2kmhmlfzpx5g2wmn7tdnq34uhh4x0r2h6qfmm5dqk07z2e
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBDVDRuN3ltY3lOZUlzM3F6
-            N2Y3OW15MFFpVkRvWEQ2bkZYT0QyWm5TMGpZClZMODlMeDg0SEhpUXBkdW05eG1T
-            aHhlZER3VUJSWWFQTWJCU1hDdzJsdGcKLS0tIFJMWGI2bVdGVENLU2VFcUcyaFRH
-            VnRaM3BPVWNuU1YwMWsrWXhLS01tS0kKdGu/D6JyB7EtkSguFj71iLLhkTLZLuX8
-            h9nlescCYYS4pa32Q0wVPR+gubJT2FvbAHiZ7/i+u/oovZLBwuj3LQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBkSFdNd0JHSFJPa1oyYnVx
+            Sk11SXdxdUduU1REVTRYZDdhT1RkMmd6MHhzCmhSS010MTF1bE1tV2tTUnozQ0ly
+            SHA0TkFVU3ZvWnFDK0hRdlBZVThSUmsKLS0tIDN2MlBDU2F5bThObExCNzZtcytR
+            Tm8wSHR2bWt4bVJ2V0EvZld5UHFpWVUK/XD8pN0CvvDb/4QmKnmJ4Gh6Nx7k8GNt
+            ea7xQqSFRWjz5u8Abp2NaFRwzBIXq5SBk9VdCIXVXRMRIXdG523Htg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-09-04T18:35:32Z"
-    mac: ENC[AES256_GCM,data:WWfizk2afb2mQfsLF/NRvPXMVvDfNHYKMvf33NQX2J/1tDVEEZa8QWYfFcV6D0uLgHKXjZgewj4HvpVKI1Ik6Q6khSnQllF3O/5MZt5Zc78T+eXwivdIBIh0ASrM2DRk4ea//Cp6mO1JjWeyICsKcPjnRytURItZvPMU+qU8rYg=,iv:ZQZQGPdAMhLksogjfHXFST4EtjrjdEjdrfQ441YN8cM=,tag:jDbGvd5LmTTjSq2bM9PdQA==,type:str]
+    lastmodified: "2023-09-10T20:13:47Z"
+    mac: ENC[AES256_GCM,data:UFbeefubzZmG8qMu4OkGIw271ahOhlPZfCCMqegBL69qSZX9kTbkXRAFEtuKqT2T3pNAEtcURW3TXLmRg2FGNjuUZiFeizAys4jTxmhxp4x+6wYGQmQKw/Cf7DMYWBemp4YIyI6SJ2fURJ7OS173h+pDCVI2F49BbF/m9Bu3WIc=,iv:FJCAb8RtTEWiAqBYYaD0pDc538iiD7zpTnU02n86L40=,tag:4bPrzpEWWZOCc36YPhfWWA==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
