--- a/kubernetes/flux/vars/cluster-secrets-user.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets-user.sops.yaml
@@ -4,10 +4,10 @@ metadata:
     name: cluster-secrets-user
     namespace: flux-system
 stringData:
-    SECRET_MAXMIND_LICENSE_KEY: ENC[AES256_GCM,data:6rXoIsPA2deDXRRw89vGaeCBotRe1oWbRhM8NP+bhjI6KWlZLshxEA==,iv:M/baPrGixKGeHjsOmrl1CiTyS4kavlu7HwDNzjShclU=,tag:4bAsR/ZTzjEVynsnXpEoPg==,type:str]
-    SECRET_PLACEHOLDER: ENC[AES256_GCM,data:alCHo71KY7gNwyqD,iv:G8EdaUwMXeepvxAkbQDPbznUZCdOvKzKjq0y5+YmFi0=,tag:yxXBU8aQUBW+wtupR5DMeQ==,type:str]
-    SECRET_POSTGRES_PASSWORD: ENC[AES256_GCM,data:bf9iOB+nbjr/,iv:VjR6BcPhRwsVLB49sVuW+nj4kFOEW56vQSTwJmT7wFE=,tag:sdNRL7dUWSER61Oz/YLADg==,type:str]
-    SECRET_POSTGRES_USERNAME: ENC[AES256_GCM,data:mHxNgEY6SQ==,iv:L5w8PmfxYPdOWoP3p4I87TrjAhzD3Kw5QhQlebs4JFs=,tag:I7+1BCv4W1QLgZ14CQNS5g==,type:str]
+    SECRET_MAXMIND_LICENSE_KEY: ENC[AES256_GCM,data:w4Jxkzfa1e98komYfGNldfHz/0e924HAlOTJlmg9WURdHAIoPrVtIg==,iv:qGuLmEAzV4pl7C8dLkJnjW0i5S9VCcarfg/1dgxutNE=,tag:gfEnAOpLLVj7ZZyuzPOFpA==,type:str]
+    SECRET_PLACEHOLDER: ENC[AES256_GCM,data:RoYlM5dSQ3nUSZUW,iv:ejafphAV7suxETRpCgQG1b0qIkG1kjt6w4GYRzwm84g=,tag:QqvtF8I3Joa14BMZN8QA1A==,type:str]
+    SECRET_POSTGRES_PASSWORD: ENC[AES256_GCM,data:owbbK13fBL/A,iv:/Tn+AaCyCktPJKQ6yVN9aHxKrOhP5IRkKYepyu1qlbQ=,tag:1slNXClJaajYSajI9eshNQ==,type:str]
+    SECRET_POSTGRES_USERNAME: ENC[AES256_GCM,data:KiEir+88qA==,iv:gxXaKMsHxYuTE+wDgAv3hghZcERK7w7BV049FmaZwUY=,tag:VtvFS8ZOQlX+WFfpiJ9Uhw==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -17,14 +17,14 @@ sops:
         - recipient: age14q9x9ftcpqfw2kmhmlfzpx5g2wmn7tdnq34uhh4x0r2h6qfmm5dqk07z2e
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBmVkdPYkFPL2FwZkZEaVdw
-            NHNMbFN3TmNkZGZyKzBvNWhScm51NXNpaXc0Ci8yZitpNXAyN0M5dU5FNXpLK3Bv
-            OVdNdmdZTlo0Y0pESlBoalRXbXBzR0UKLS0tIDZGcUJEYnBSV1lVaW82amNLZ05H
-            V3JoZERUVWdZZ1ArWkY4N2l2U3lIT3cKWuz9aircJ/U3ZY52Gny51xh8j3H9/VVs
-            KYz0Xd5XxCqU0jMzinD/xR/uF8bC6GjVBxSMeWS1dC0EXhkrtIq2nQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAyWSs4VkxrMVkySys5cDZC
+            STdsYU1zS2xDVGpiQnFyaitsSkJFaDBGRHpRCnV6NVRzeFVRU1BkQ1pkUkNpY3RU
+            bVM5bDBybVZUdmdYV1I1b09qRUZSaGcKLS0tIHVlY09XSjNMU3RyeGtRTEdoMFhy
+            bnlTdHFMemlaa3VUTUYxV0RGMnNKMW8Ks6OUWoeSl3u1kcXSP5+N/U5lbDGGf2La
+            eXDrG5Q6es1+eXvipn++c9xlxGAkkkwSGlhbFp4HqYg1hUQFQeVvUA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-09-10T20:13:47Z"
-    mac: ENC[AES256_GCM,data:T7NqDYJs3csh+kUwjfaYlaiZZ+XJlEOEQ+kMCcba59hRJ+MlbseSYdq8U197Ajzp47HWBTPNLGLTwcd4UcZhaa6lI0++sWwsGOOiEG2GT3vT7OHu1WloeqjXrkplAcySDQ9uRjZf6gC0XfdIlFg8Gga6zIB4eD7wltlpZPTA7lg=,iv:svmAdaXnQTf2NV7HAU34FRKVP7c2jmu7aCG2Ofcg+hU=,tag:s/1+hiPawxymvScxjj4DNA==,type:str]
+    lastmodified: "2023-09-11T12:56:24Z"
+    mac: ENC[AES256_GCM,data:vA8FXBStUKbzisvo4JZyIn4/wCAaUW56hIV9J2X1gJOKpQwboX3gHShsHi2nne3MOoKfcqq4u592ge8+Xpgu836DGWPR9y28kjjoREP1LfTgm4WNzZL0CTzJtGjkK19iUWxrfo0eaOwKc5PfgiMi08QCgQmSxef+Q2TwhzJO+sk=,iv:rwQmkFImG4d9fjZI9otKrBoIKhTVi+gBrJyrhyJW+dc=,tag:VQcv4ulxIUhQxe8vnEFV0A==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
