--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -4,12 +4,12 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_ACME_EMAIL: ENC[AES256_GCM,data:g3262SprWFFTNMoSsFlwNk2rFyNy,iv:Br5WbiicuOjPplK72HzvILOD7kQ6O/g0y/OwJj8XqMU=,tag:j294BJzWKTYIAurHgtfUFQ==,type:str]
-    SECRET_CLOUDFLARE_TUNNEL_ID: ENC[AES256_GCM,data:qTFA/BBHnD/1AVUOzXmy0AiiCPXR8HFvuQzMqXvoclkACKu2,iv:n1Epj4IkkwIDO+TaE3+LVSwS2g0wyhz1IGcHCkbFx2Q=,tag:PsHn/8Zvv7++x3Rh14xCSg==,type:str]
-    SECRET_DOMAIN: ENC[AES256_GCM,data:OnvoLZ7pXG2BSVuFfA==,iv:bZMTSjibvNUQKgFy4ZGxuRpD/ZjuLFZpD7bDJZrzsEU=,tag:u7oz0CEujEXxPTZwEZJg1Q==,type:str]
-    SECRET_DOMAIN2: ENC[AES256_GCM,data:N6Hohy8hGjOxrgc=,iv:06gP50pT1QBiBBuWwEUYw8OaLPrxQFnOJHnEGdBCPcg=,tag:bDog/ObgBdyir3cPHU8jig==,type:str]
-    SECRET_MINIO_ACCESS_KEY: ENC[AES256_GCM,data:TuImJW6wngzguTCV3dcmbm+fERY79Aj5olqTOl5fqsJb0HdYp2yrsQ==,iv:o6Qh1cJtmRJUtDbDFmB9QOHOoF4kUpjZjXcDoSpBp6Q=,tag:fn1S9j3UoQS729/8EdyYCg==,type:str]
-    SECRET_MINIO_SECRET_KEY: ENC[AES256_GCM,data:zul01pY7GPB5JmgeefInnBiQ8iM=,iv:8CZu1qTUUUnbehWRDKgAUzzf4hJkwERGPTIzdkG5ZhA=,tag:7rsymuU6wBSqYmk8Ef4+Dw==,type:str]
+    SECRET_ACME_EMAIL: ENC[AES256_GCM,data:7lq9UZ6Y0pMQvqfOdiwhtTCY26CJ,iv:B8VDY2Hu9rRQvzln6nCJFCjfOvffEmyWt0pmhVk2rkE=,tag:N0LqxaHwtv0P0s42j8DfhQ==,type:str]
+    SECRET_CLOUDFLARE_TUNNEL_ID: ENC[AES256_GCM,data:2HnUPX3KrUgBvqQ0+IaClaUrJI2qAp8MLz1BpNmzROhKrgci,iv:EXvPK8Ddj/kGOpTRgLGDq5qHt9FQSXg2E47DMlHGVes=,tag:rtMJxjejQzgSTBxb9aReAw==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:MumadHdb4tUVgHj1dQ==,iv:SoJmMhIs6p5zHSzFFhfsGDCBXpDZEelQeejKsU70A28=,tag:mAJTUeBimjHXk/Q1qvra1Q==,type:str]
+    SECRET_DOMAIN2: ENC[AES256_GCM,data:lXMyBiRmRaxB5X0=,iv:qKl1Fukhy4k8tnRbhKd2ABpmcwFJcYNGIPnPiIMSRyM=,tag:3Hkk0IT+JiaZtBhuKdwUNQ==,type:str]
+    SECRET_MINIO_ACCESS_KEY: ENC[AES256_GCM,data:YobnYGq28VBmv/81VkftjRe1KtGS3sB/JYkBZDSPb92t12jLh6+jPQ==,iv:BniFQjcWbaXt6HfXTyBXI/spzAao2oKPpoQhmswu5ms=,tag:ifbBnh5+zShujoTHGf6bNQ==,type:str]
+    SECRET_MINIO_SECRET_KEY: ENC[AES256_GCM,data:ydnue3KL+1DYwDPjLa1MipvQUyc=,iv:eVPL2b6/BHni+RHpOAP0KLNZmeiRPl1GEF+uCVopJx4=,tag:fI2tg68ozAtVupdTiaEkrg==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -19,14 +19,14 @@ sops:
         - recipient: age14q9x9ftcpqfw2kmhmlfzpx5g2wmn7tdnq34uhh4x0r2h6qfmm5dqk07z2e
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBkSFdNd0JHSFJPa1oyYnVx
-            Sk11SXdxdUduU1REVTRYZDdhT1RkMmd6MHhzCmhSS010MTF1bE1tV2tTUnozQ0ly
-            SHA0TkFVU3ZvWnFDK0hRdlBZVThSUmsKLS0tIDN2MlBDU2F5bThObExCNzZtcytR
-            Tm8wSHR2bWt4bVJ2V0EvZld5UHFpWVUK/XD8pN0CvvDb/4QmKnmJ4Gh6Nx7k8GNt
-            ea7xQqSFRWjz5u8Abp2NaFRwzBIXq5SBk9VdCIXVXRMRIXdG523Htg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB2endNeDdGT1BMblBPYVRF
+            U1M5bGpNcy8vZWZRV2xMbGhUWld2dGc2WERvCkVVc1NneTlHcjV4WGpweGQ5RnlB
+            YmNaVzdFMU5TeWJNQmJseWl6ZXBpUFkKLS0tIEUrOC9jVzBsa3FId0w3TWR1SmNO
+            R2xXNGtONGEvYi96dXllV3RhUWY3cGMK8OHJUKYrQvMBbo+BxPmZFZAjFaHh89pg
+            sPrhY2Ezs+IzzrH00SnyQuPM4aeT3ykWBDd6tzm/Ooo/S0JBI21j+Q==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-09-10T20:13:47Z"
-    mac: ENC[AES256_GCM,data:UFbeefubzZmG8qMu4OkGIw271ahOhlPZfCCMqegBL69qSZX9kTbkXRAFEtuKqT2T3pNAEtcURW3TXLmRg2FGNjuUZiFeizAys4jTxmhxp4x+6wYGQmQKw/Cf7DMYWBemp4YIyI6SJ2fURJ7OS173h+pDCVI2F49BbF/m9Bu3WIc=,iv:FJCAb8RtTEWiAqBYYaD0pDc538iiD7zpTnU02n86L40=,tag:4bPrzpEWWZOCc36YPhfWWA==,type:str]
+    lastmodified: "2023-09-11T12:56:25Z"
+    mac: ENC[AES256_GCM,data:YBb0h0yuo2QmWqh/Lf4i0fDaMg53H507NC46Yn+7rDDHGDa4X6HsTGjATJc17wGDWigJF+7n/umMGSfvWxGMjtyItbkVAOyohHz/2v+v+2rIJWv7svTrRif3/2Q1d7GvTBnzwzuGBoF/sWwwsGB7gxl6iQ9utGfZR2q1jY0rKAI=,iv:KttuZDgbiW+X8aVmaEkAYeEc9kHQSiHuICkbg2hjRX4=,tag:H4Hs5fnQbygQG9R2UZK6jw==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
