--- a/ansible/inventory/hosts.yaml
+++ b/ansible/inventory/hosts.yaml
@@ -32,3 +32,6 @@ kubernetes:
         k8s-09:
           ansible_user: debian
           ansible_host: 192.168.2.18
+        k8s-10:
+          ansible_user: debian
+          ansible_host: 192.168.2.19
