--- a/kubernetes/apps/media/qbittorrent/app/helmrelease.yaml
+++ b/kubernetes/apps/media/qbittorrent/app/helmrelease.yaml
@@ -24,7 +24,7 @@ spec:
       retries: 5
   values:
     image:
-      repository: dghcr.io/onedr0p/qbittorrent
+      repository: ghcr.io/onedr0p/qbittorrent
       tag: 4.5.4
     env:
       TZ: "${TIMEZONE}"
