--- a/kubernetes/apps/default/kustomization.yaml
+++ b/kubernetes/apps/default/kustomization.yaml
@@ -4,7 +4,7 @@ kind: Kustomization
 resources:
   - ./namespace.yaml
   - ./hajimari/ks.yaml
-  - ./home-assistant/ks.yaml
+ # - ./home-assistant/ks.yaml
   - ./postgresql/ks.yaml
   - ./website/ks.yaml
   - ./whoami/ks.yaml
