--- a/kubernetes/apps/media/porla/app/helmrelease.yaml
+++ b/kubernetes/apps/media/porla/app/helmrelease.yaml
@@ -38,6 +38,8 @@ spec:
     env:
       TZ: "${TIMEZONE}"
       PORLA_STATE_DIR: /config
+      PORLA_WORKFLOW_DIR: /config/workflows
+      PORLA_CONFIG_FILE: /config/config.toml
       PORLA_LOG_LEVEL: debug
     service:
       main:
