--- a/kubernetes/apps/media/porla/app/kustomization.yaml
+++ b/kubernetes/apps/media/porla/app/kustomization.yaml
@@ -6,3 +6,7 @@ resources:
   - ./helmrelease.yaml
   - ./ingress.yaml
   - ./pvc.yaml
+configMapGenerator:
+  - name: porla-configmap
+    files:
+      - config.toml
