--- a/kubernetes/apps/media/porla/app/kustomization.yaml
+++ b/kubernetes/apps/media/porla/app/kustomization.yaml
@@ -9,4 +9,6 @@ resources:
 configMapGenerator:
   - name: porla-configmap
     files:
-      - config.toml
+      - config.toml=./configs/config.toml
+generatorOptions:
+  disableNameSuffixHash: true
