--- a/kubernetes/apps/networking/authelia/app/kustomization.yaml
+++ b/kubernetes/apps/networking/authelia/app/kustomization.yaml
@@ -4,7 +4,7 @@ kind: Kustomization
 namespace: networking
 resources:
   - ./helmrelease.yaml
-  - authelia-secrets.sops.yaml
+  - authelia.sops.yaml
   - pvc.yaml
   - users.yaml
   - ingress.yaml
