--- a/kubernetes/apps/networking/authelia/app/helmrelease.yaml
+++ b/kubernetes/apps/networking/authelia/app/helmrelease.yaml
@@ -16,6 +16,9 @@ spec:
         namespace: flux-system
   values:
     domain: "${SECRET_DOMAIN}"
+    envFrom:
+      - secretRef:
+          name: authelia-secrets
     service:
       port: 9091
     pod:
