--- a/kubernetes/apps/networking/authelia/app/kustomization.yaml
+++ b/kubernetes/apps/networking/authelia/app/kustomization.yaml
@@ -12,3 +12,5 @@ configMapGenerator:
   - name: authelia-config-users
     files:
       - ./users-config.yaml
+generatorOptions:
+  disableNameSuffixHash: true
