--- a/kubernetes/flux/vars/cluster-secrets-user.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets-user.sops.yaml
@@ -8,6 +8,12 @@ stringData:
     SECRET_PLACEHOLDER: ENC[AES256_GCM,data:RoYlM5dSQ3nUSZUW,iv:ejafphAV7suxETRpCgQG1b0qIkG1kjt6w4GYRzwm84g=,tag:QqvtF8I3Joa14BMZN8QA1A==,type:str]
     SECRET_POSTGRES_PASSWORD: ENC[AES256_GCM,data:owbbK13fBL/A,iv:/Tn+AaCyCktPJKQ6yVN9aHxKrOhP5IRkKYepyu1qlbQ=,tag:1slNXClJaajYSajI9eshNQ==,type:str]
     SECRET_POSTGRES_USERNAME: ENC[AES256_GCM,data:KiEir+88qA==,iv:gxXaKMsHxYuTE+wDgAv3hghZcERK7w7BV049FmaZwUY=,tag:VtvFS8ZOQlX+WFfpiJ9Uhw==,type:str]
+    JWT_TOKEN: ENC[AES256_GCM,data:iwkmdrgZoBpV03qi5hhtGLJaem/wf5uVQ19Xzez8ruz6eBScDJCGSo2ckO6wCPpu1BGSYXkQitnxDS6Q/RE41g==,iv:XXL2+nSbH80llDCaw5TL4nBhN7dY8eRpV7VjTV6aAto=,tag:dMLGzUE8j2F/SLctpJh2FQ==,type:str]
+    AUTHELIA_EMAIL: ENC[AES256_GCM,data:mLZQoK7fjO3Akf/8cJ+jjGa4ngjT,iv:Vmm0ziXEOr9Osrz3YKJKTjpC2dte7han6KvlaM0Heok=,tag:leM8GK5WJFPMhketKvyw6g==,type:str]
+    AUTHELIA_PASSWORD: ENC[AES256_GCM,data:SUdmHfAgniGa,iv:3vHJz7H+Cp37wM67XtJoTxvgkMJrHFHskO6gCzScGzE=,tag:Afnj6ilMWxKLf8lOfKaPGg==,type:str]
+    AUTHELIA_DISPLAY_NAME: ENC[AES256_GCM,data:8wRipNNSAg==,iv:wCO6Fg5+i6ZI2nsBaWyXOUu1NCUXkj7KTa9XLr6t3eE=,tag:PTaNfMflinU1F6NmXBW+uw==,type:str]
+    SESSION_ENCRYPTION_KEY: ENC[AES256_GCM,data:mSrw3Dny3koLyyyoo7JlqPK/d1dATsNtGGLEGN6BA5ke/XBD8EH+QBl1C4GAZu1XQr9kIdVoF1VWOslOCloy5A==,iv:oQDAIhvLFaUG/oS2zo0A9JBkfgV9G4TPu+wOt1NApEg=,tag:VP30rgpyVMjWZSL0auWcLg==,type:str]
+    STORAGE_ENCRYPTION_KEY: ENC[AES256_GCM,data:GP/8eJupqWYt1kT9tGA0gmpWtr7KWlKg0F8KvHRNU4HPu+/QpoF6s2nmE8PN+4ElAEus/2r+8aqikJ+6Z4KBgQ==,iv:ripalii6AnTJvck/UMA5I+MmdKQwl/hQTtF8Zw/ylwo=,tag:3MNyHGTVC9PQnKF71soBKA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -23,8 +29,8 @@ sops:
             bnlTdHFMemlaa3VUTUYxV0RGMnNKMW8Ks6OUWoeSl3u1kcXSP5+N/U5lbDGGf2La
             eXDrG5Q6es1+eXvipn++c9xlxGAkkkwSGlhbFp4HqYg1hUQFQeVvUA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-09-11T12:56:24Z"
-    mac: ENC[AES256_GCM,data:vA8FXBStUKbzisvo4JZyIn4/wCAaUW56hIV9J2X1gJOKpQwboX3gHShsHi2nne3MOoKfcqq4u592ge8+Xpgu836DGWPR9y28kjjoREP1LfTgm4WNzZL0CTzJtGjkK19iUWxrfo0eaOwKc5PfgiMi08QCgQmSxef+Q2TwhzJO+sk=,iv:rwQmkFImG4d9fjZI9otKrBoIKhTVi+gBrJyrhyJW+dc=,tag:VQcv4ulxIUhQxe8vnEFV0A==,type:str]
+    lastmodified: "2023-09-18T02:25:33Z"
+    mac: ENC[AES256_GCM,data:wjqjaouO8aHn82raT2DQu71MOPdN3SQSIE6XPJ8KD/HmKmOFMkr35Yh9f0nWIebL16t5jQjMnyz1GxA33Asou0VqNLYAeuIeFKU+fmMlFKnVmu8ggZC3ZYF89cKyfhxefYg5NRV1cKTFKxg4A2xU/XmS1XdjRP0Ul4jNSu9nvsQ=,iv:ErXupEDblGQJ9sgplcNmNAdnoBndqOiKwsoXc1KeI70=,tag:Vgyx1eV3LzuiP7FJuEVU4w==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
