--- a/kubernetes/flux/vars/cluster-secrets-user.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets-user.sops.yaml
@@ -8,12 +8,12 @@ stringData:
     SECRET_PLACEHOLDER: ENC[AES256_GCM,data:RoYlM5dSQ3nUSZUW,iv:ejafphAV7suxETRpCgQG1b0qIkG1kjt6w4GYRzwm84g=,tag:QqvtF8I3Joa14BMZN8QA1A==,type:str]
     SECRET_POSTGRES_PASSWORD: ENC[AES256_GCM,data:owbbK13fBL/A,iv:/Tn+AaCyCktPJKQ6yVN9aHxKrOhP5IRkKYepyu1qlbQ=,tag:1slNXClJaajYSajI9eshNQ==,type:str]
     SECRET_POSTGRES_USERNAME: ENC[AES256_GCM,data:KiEir+88qA==,iv:gxXaKMsHxYuTE+wDgAv3hghZcERK7w7BV049FmaZwUY=,tag:VtvFS8ZOQlX+WFfpiJ9Uhw==,type:str]
-    JWT_TOKEN: ENC[AES256_GCM,data:iwkmdrgZoBpV03qi5hhtGLJaem/wf5uVQ19Xzez8ruz6eBScDJCGSo2ckO6wCPpu1BGSYXkQitnxDS6Q/RE41g==,iv:XXL2+nSbH80llDCaw5TL4nBhN7dY8eRpV7VjTV6aAto=,tag:dMLGzUE8j2F/SLctpJh2FQ==,type:str]
-    AUTHELIA_EMAIL: ENC[AES256_GCM,data:mLZQoK7fjO3Akf/8cJ+jjGa4ngjT,iv:Vmm0ziXEOr9Osrz3YKJKTjpC2dte7han6KvlaM0Heok=,tag:leM8GK5WJFPMhketKvyw6g==,type:str]
-    AUTHELIA_PASSWORD: ENC[AES256_GCM,data:SUdmHfAgniGa,iv:3vHJz7H+Cp37wM67XtJoTxvgkMJrHFHskO6gCzScGzE=,tag:Afnj6ilMWxKLf8lOfKaPGg==,type:str]
-    AUTHELIA_DISPLAY_NAME: ENC[AES256_GCM,data:8wRipNNSAg==,iv:wCO6Fg5+i6ZI2nsBaWyXOUu1NCUXkj7KTa9XLr6t3eE=,tag:PTaNfMflinU1F6NmXBW+uw==,type:str]
-    SESSION_ENCRYPTION_KEY: ENC[AES256_GCM,data:mSrw3Dny3koLyyyoo7JlqPK/d1dATsNtGGLEGN6BA5ke/XBD8EH+QBl1C4GAZu1XQr9kIdVoF1VWOslOCloy5A==,iv:oQDAIhvLFaUG/oS2zo0A9JBkfgV9G4TPu+wOt1NApEg=,tag:VP30rgpyVMjWZSL0auWcLg==,type:str]
-    STORAGE_ENCRYPTION_KEY: ENC[AES256_GCM,data:GP/8eJupqWYt1kT9tGA0gmpWtr7KWlKg0F8KvHRNU4HPu+/QpoF6s2nmE8PN+4ElAEus/2r+8aqikJ+6Z4KBgQ==,iv:ripalii6AnTJvck/UMA5I+MmdKQwl/hQTtF8Zw/ylwo=,tag:3MNyHGTVC9PQnKF71soBKA==,type:str]
+    SECRET_AUTHELIA_JWT_TOKEN: ENC[AES256_GCM,data:EKcPAKN1FHIaQIIZKIJ4FWqv5XXHgns/gVLygRcqPngLkQe9Blo7Fk7lSZpkNeNiUdmZjQDFiVaeu7aDAL+/Jw==,iv:pogd9diBPu7FMITTARZy9ZYdOfvOsT6vfZ2f+KGTdZw=,tag:Ajsjx5kqEGuxiC1UY1WpYA==,type:str]
+    SECRET_AUTHELIA_EMAIL: ENC[AES256_GCM,data:NeBSaac87q4YdTCDvd6CeyOBXzLF,iv:W2E/K1EDePJeCtktZvXUY51WiUYwYmZRbQvoUYFlVq0=,tag:C40qakrbP+TQQkUyTaVMLQ==,type:str]
+    SECRET_AUTHELIA_PASSWORD: ENC[AES256_GCM,data:tPj+IqnzP8Kd,iv:0UVd1aVDwDiIkC1W7PivP4KxgoGvj2BRKiwikHyCFS4=,tag:0eUK6ukl12nPEeM6armT7A==,type:str]
+    SECRET_AUTHELIA_DISPLAY_NAME: ENC[AES256_GCM,data:W/OthdJ/oQ==,iv:WYKU6qVLIfo+N+tYu8p0GEP0IA6vFHcGnXG6mSX+qa0=,tag:CLnO0M96LxlxxWaR7Dj6ew==,type:str]
+    SECRET_AUTHELIA_SESSION_ENCRYPTION_KEY: ENC[AES256_GCM,data:rDlg/VhKLD1h9NWgi4dV5o+KEFlEtjnZHmJhWpxqwP7xdgjpV8oq3rMAWSsLpSmBoT6/l3sRA6qjqPr+Of9wTg==,iv:0KoajALS7ctyDHk1gl+BySX3sabrR0Dcrlz2fi/9v70=,tag:54ryY+Jo2CAgwQQ3z/O8QA==,type:str]
+    SECRET_AUTHELIA_STORAGE_ENCRYPTION_KEY: ENC[AES256_GCM,data:I4DcN9FdLjdM5b+634K2usDpuVbk/MvDsDRYPtazqQ7A4k9P7DC1ZbWW8Hf9U5Rt88Iuq7d7n/HxA5TWZPngZg==,iv:in80Hnnq1YhjaoBnen9+VKZlAgT/KhtgmyF2hLCFS1s=,tag:gCZZ4kPExneU8ZkXSR9DKg==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -29,8 +29,8 @@ sops:
             bnlTdHFMemlaa3VUTUYxV0RGMnNKMW8Ks6OUWoeSl3u1kcXSP5+N/U5lbDGGf2La
             eXDrG5Q6es1+eXvipn++c9xlxGAkkkwSGlhbFp4HqYg1hUQFQeVvUA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-09-18T02:25:33Z"
-    mac: ENC[AES256_GCM,data:wjqjaouO8aHn82raT2DQu71MOPdN3SQSIE6XPJ8KD/HmKmOFMkr35Yh9f0nWIebL16t5jQjMnyz1GxA33Asou0VqNLYAeuIeFKU+fmMlFKnVmu8ggZC3ZYF89cKyfhxefYg5NRV1cKTFKxg4A2xU/XmS1XdjRP0Ul4jNSu9nvsQ=,iv:ErXupEDblGQJ9sgplcNmNAdnoBndqOiKwsoXc1KeI70=,tag:Vgyx1eV3LzuiP7FJuEVU4w==,type:str]
+    lastmodified: "2023-09-18T02:53:12Z"
+    mac: ENC[AES256_GCM,data:vgfNjx7SVkjNNM/QBvm+SBSD/xdUF5wQQVTEvn85yKzfg7Pp5j+3R6gZa5f0k7ASmUGHyOnOaKCrS89szHp+ZZD6iHnuJyd42zGrgq7SWhpkYCKKdH/uIlOMwTM34bGPonKrDQYgzGH1UKxrZFtmjQp69/kvm4YqrJlp9VHh+XQ=,iv:+SQBZS4srDSSVKBK60JC4RKNBfLmJ82iU/n/0nea9SM=,tag:ng3ao19juHu1IUl3cEZk3Q==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
