--- a/kubernetes/apps/networking/authelia/app/helmrelease.yaml
+++ b/kubernetes/apps/networking/authelia/app/helmrelease.yaml
@@ -26,19 +26,19 @@ spec:
       replicas: 1
       strategy:
         type: Recreate
-      extraVolumeMounts:
-        - name: config-users
-          mountPath: /data
-      extraVolumes:
-        - name: config-users
-          configMap:
-            name: authelia-config-users
-            items:
-              - key: users_database.yml
-                path: users_database.yml
-      envFrom:
-        - secretRef:
-          name: authelia-secrets
+      # extraVolumeMounts:
+      #   - name: config-users
+      #     mountPath: /data
+      # extraVolumes:
+      #   - name: config-users
+      #     configMap:
+      #       name: authelia-config-users
+      #       items:
+      #         - key: users_database.yml
+      #           path: users_database.yml
+      # envFrom:
+      #   - secretRef:
+      #     name: authelia-secrets
       env:
         AUTHELIA_DEFAULT_REDIRECTION_URL: "https://authelia.${SECRET_DOMAIN}"
         AUTHELIA_DUO_API_DISABLE: "true"
