--- a/kubernetes/apps/networking/authelia/app/helmrelease.yaml
+++ b/kubernetes/apps/networking/authelia/app/helmrelease.yaml
@@ -68,7 +68,7 @@ spec:
         #     algorithm: argon2id
         file:
           enabled: true
-          path: /data/users_database.yml
+          path: /config/users_database.yml
           password:
             algorithm: argon2id
             # iterations: 50000
