--- a/kubernetes/apps/networking/authelia/app/ingress.yaml
+++ b/kubernetes/apps/networking/authelia/app/ingress.yaml
@@ -7,6 +7,12 @@ metadata:
   annotations:
     external-dns.alpha.kubernetes.io/target: "external.${SECRET_DOMAIN}"
     hajimari.io/enable: "true"
+    hajimari.io/icon: mdi:shield-account
+    nginx.ingress.kubernetes.io/configuration-snippet: |
+      add_header Cache-Control "no-store";
+      add_header Pragma "no-cache";
+      add_header X-Frame-Options "SAMEORIGIN";
+      add_header X-XSS-Protection "1; mode=block";
 spec:
   ingressClassName: internal
   rules:
