--- a/kubernetes/apps/default/hajimari/app/helmrelease.yaml
+++ b/kubernetes/apps/default/hajimari/app/helmrelease.yaml
@@ -40,6 +40,7 @@ spec:
         matchNames:
           - default
           - monitoring
+          - networking
           - media
           - kube-system
       globalBookmarks:
