--- a/kubernetes/apps/networking/authelia/app/ingress.yaml
+++ b/kubernetes/apps/networking/authelia/app/ingress.yaml
@@ -14,7 +14,7 @@ metadata:
       add_header X-Frame-Options "SAMEORIGIN";
       add_header X-XSS-Protection "1; mode=block";
 spec:
-  ingressClassName: internal
+  ingressClassName: external
   rules:
     - host: "authelia.${SECRET_DOMAIN}"
       http:
