--- a/kubernetes/apps/networking/authelia/app/helmrelease.yaml
+++ b/kubernetes/apps/networking/authelia/app/helmrelease.yaml
@@ -137,3 +137,12 @@ spec:
     #     subPath: configuration.yaml
     #     mountPath: /config/configuration.yml
     #     readOnly: false
+    affinity:
+      nodeAffinity:
+        requiredDuringSchedulingIgnoredDuringExecution:
+          nodeSelectorTerms:
+            - matchExpressions:
+                - key: kubernetes.io/arch
+                  operator: In
+                  values:
+                    - amd64
