--- a/kubernetes/apps/networking/authelia/app/helmrelease.yaml
+++ b/kubernetes/apps/networking/authelia/app/helmrelease.yaml
@@ -49,10 +49,10 @@ spec:
       #   - secretRef:
       #     name: authelia-secrets
       env:
-        AUTHELIA_DEFAULT_REDIRECTION_URL: "https://authelia.${SECRET_DOMAIN}"
+        AUTHELIA_DEFAULT_REDIRECTION_URL: "https://auth.${SECRET_DOMAIN}"
         AUTHELIA_DUO_API_DISABLE: "true"
         AUTHELIA_LOG_LEVEL: trace
-        AUTHELIA_SERVER_PORT: 9091
+        AUTHELIA_SERVER_PORT: 80
         AUTHELIA_SESSION_DOMAIN: "${SECRET_DOMAIN}"
         AUTHELIA_THEME: grey
         AUTHELIA_TOTP_ISSUER: authelia.com
