--- a/kubernetes/apps/default/kustomization.yaml
+++ b/kubernetes/apps/default/kustomization.yaml
@@ -6,6 +6,6 @@ resources:
   - ./hajimari/ks.yaml
   - ./home-assistant/ks.yaml
   - ./n8n/ks.yaml
-  - ./postgresql/ks.yaml
+  #- ./postgresql/ks.yaml
   - ./website/ks.yaml
   - ./whoami/ks.yaml
