--- a/kubernetes/apps/media/prowlarr/app/helmrelease.yaml
+++ b/kubernetes/apps/media/prowlarr/app/helmrelease.yaml
@@ -26,6 +26,13 @@ spec:
   uninstall:
     keepHistory: false
   values:
+    initContainers:
+      01-init-db:
+        image: ghcr.io/onedr0p/postgres-init:14.8
+        imagePullPolicy: IfNotPresent
+        envFrom: &envFrom
+          - secretRef:
+              name: prowlarr-secret
     controller:
       annotations:
         reloader.stakater.com/auto: "true"
@@ -39,6 +46,10 @@ spec:
       PROWLARR__LOG_LEVEL: info
       PROWLARR__AUTHENTICATION_METHOD: External
       PROWLARR__THEME: dark
+    # ## sops --encrypt --in-place ./kubernetes/apps/media/prowlarr/app/prowlarr.sops.yaml
+    # ## sops --decrypt ./kubernetes/apps/media/prowlarr/app/prowlarr.sops.yaml | kubectl apply -f -
+
+    envFrom: *envFrom
     service:
       main:
         ports:
