--- a/kubernetes/apps/media/prowlarr/app/ingress.yaml
+++ b/kubernetes/apps/media/prowlarr/app/ingress.yaml
@@ -5,7 +5,7 @@ metadata:
   name: prowlarr
   namespace: media
   annotations:
-    external-dns.alpha.kubernetes.io/target: "external.${SECRET_DOMAIN}"
+    #external-dns.alpha.kubernetes.io/target: "external.${SECRET_DOMAIN}"
     hajimari.io/enable: "true"
     hajimari.io/icon: download-box
 spec:
