--- a/kubernetes/apps/media/prowlarr/ks.yaml
+++ b/kubernetes/apps/media/prowlarr/ks.yaml
@@ -5,7 +5,25 @@ metadata:
   name: cluster-apps-prowlarr
   namespace: flux-system
 spec:
+  dependsOn:
+    - name: cluster-apps-postgresql
   path: ./kubernetes/apps/media/prowlarr/app
+  prune: true
+  sourceRef:
+    kind: GitRepository
+    name: home-kubernetes
+  wait: false
+  interval: 30m
+  retryInterval: 1m
+  timeout: 5m
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: cluster-apps-prowlarr-tools
+  namespace: flux-system
+spec:
+  path: ./kubernetes/apps/media/prowlarr/tools
   prune: true
   sourceRef:
     kind: GitRepository
