--- a/kubernetes/flux/vars/cluster-secrets-user.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets-user.sops.yaml
@@ -14,6 +14,7 @@ stringData:
     SECRET_AUTHELIA_DISPLAY_NAME: ENC[AES256_GCM,data:W/OthdJ/oQ==,iv:WYKU6qVLIfo+N+tYu8p0GEP0IA6vFHcGnXG6mSX+qa0=,tag:CLnO0M96LxlxxWaR7Dj6ew==,type:str]
     SECRET_AUTHELIA_SESSION_ENCRYPTION_KEY: ENC[AES256_GCM,data:rDlg/VhKLD1h9NWgi4dV5o+KEFlEtjnZHmJhWpxqwP7xdgjpV8oq3rMAWSsLpSmBoT6/l3sRA6qjqPr+Of9wTg==,iv:0KoajALS7ctyDHk1gl+BySX3sabrR0Dcrlz2fi/9v70=,tag:54ryY+Jo2CAgwQQ3z/O8QA==,type:str]
     SECRET_AUTHELIA_STORAGE_ENCRYPTION_KEY: ENC[AES256_GCM,data:I4DcN9FdLjdM5b+634K2usDpuVbk/MvDsDRYPtazqQ7A4k9P7DC1ZbWW8Hf9U5Rt88Iuq7d7n/HxA5TWZPngZg==,iv:in80Hnnq1YhjaoBnen9+VKZlAgT/KhtgmyF2hLCFS1s=,tag:gCZZ4kPExneU8ZkXSR9DKg==,type:str]
+    SECRET_REDIS_PASSWORD: ENC[AES256_GCM,data:bgJYUbWMMmKq,iv:wIBwnjwtFd2+KMZxf5hrMDXohdbrMsn8HA9wbue+hXU=,tag:7sMFWAyNto/NA1qtUxBXSg==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -29,8 +30,8 @@ sops:
             bnlTdHFMemlaa3VUTUYxV0RGMnNKMW8Ks6OUWoeSl3u1kcXSP5+N/U5lbDGGf2La
             eXDrG5Q6es1+eXvipn++c9xlxGAkkkwSGlhbFp4HqYg1hUQFQeVvUA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-09-18T02:53:12Z"
-    mac: ENC[AES256_GCM,data:vgfNjx7SVkjNNM/QBvm+SBSD/xdUF5wQQVTEvn85yKzfg7Pp5j+3R6gZa5f0k7ASmUGHyOnOaKCrS89szHp+ZZD6iHnuJyd42zGrgq7SWhpkYCKKdH/uIlOMwTM34bGPonKrDQYgzGH1UKxrZFtmjQp69/kvm4YqrJlp9VHh+XQ=,iv:+SQBZS4srDSSVKBK60JC4RKNBfLmJ82iU/n/0nea9SM=,tag:ng3ao19juHu1IUl3cEZk3Q==,type:str]
+    lastmodified: "2023-10-01T16:32:59Z"
+    mac: ENC[AES256_GCM,data:lPhrurh8g4v+gQWNjI5/0P8/+yFvxEYjDa0OoxFgQI1Ene9LX7GQMSp+FTVoRVDWcyFZNdJD5fyrPa9MdleOsVOuyqqT5iyNF79GON/p+J1RLIqh9cm1lsnwXNIqD3nI3lvTPTEDVXdy1v2qw/tlHf2iWL1BkWvA81O2lQYL+XE=,iv:6Yys0Eo3hUzsPPiCULk61HkSl+4pfUi7v5w+kbFcKiA=,tag:gJMWvZb44DmihwZ+YqCY3w==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
-    version: 3.7.3
+    version: 3.8.0
