--- a/kubernetes/flux/vars/cluster-settings-user.yaml
+++ b/kubernetes/flux/vars/cluster-settings-user.yaml
@@ -5,4 +5,4 @@ metadata:
   name: cluster-settings-user
   namespace: flux-system
 data:
-  SETTINGS_PLACEHOLDER: "settings-value"
+  REDIS_ADDR_V4: 192.168.2.49
