--- a/kubernetes/apps/default/kustomization.yaml
+++ b/kubernetes/apps/default/kustomization.yaml
@@ -7,6 +7,6 @@ resources:
   - ./home-assistant/ks.yaml
   - ./n8n/ks.yaml
   - ./postgresql/ks.yaml
- # - ./redis/ks.yaml
+  - ./redis/ks.yaml
   - ./website/ks.yaml
   - ./whoami/ks.yaml
